@@ -1,5 +1,10 @@
 2011-07-29  Rudy Neeser  <rudy.neeser@gmail.com>
 
+	* utility.lisp (b-spline-knots): The knot data structure now
+	has a boolean to indicate whether there are multiplicities or not.
+	(get-ith-knot): Has an easy speedup for when there are no
+	multiplicities.
+
 	* spline.lisp (b-spline): Added a B-SPLINE class, which represents
 	non-uniform b-splines, although it has much code to speed up the
 	uniform cubic and quadratic cases.
